# blender_savepoints_ext

./: .gitignore  README.md  justfile  pyproject.toml
.blender_stubs/addon_utils/: __init__.pyi
.blender_stubs/aud/: __init__.pyi
.blender_stubs/bl_ui/: __init__.pyi
.blender_stubs/bl_ui/anim/: __init__.pyi
.blender_stubs/bl_ui/asset_shelf/: __init__.pyi
.blender_stubs/bl_ui/generic_ui_list/: __init__.pyi
.blender_stubs/bl_ui/node_add_menu/: __init__.pyi
.blender_stubs/bl_ui/node_add_menu_compositor/: __init__.pyi
.blender_stubs/bl_ui/node_add_menu_geometry/: __init__.pyi
.blender_stubs/bl_ui/node_add_menu_shader/: __init__.pyi
.blender_stubs/bl_ui/node_add_menu_texture/: __init__.pyi
.blender_stubs/bl_ui/properties_animviz/: __init__.pyi
.blender_stubs/bl_ui/properties_collection/: __init__.pyi
.blender_stubs/bl_ui/properties_constraint/: __init__.pyi
.blender_stubs/bl_ui/properties_data_armature/: __init__.pyi
.blender_stubs/bl_ui/properties_data_bone/: __init__.pyi
.blender_stubs/blf/: __init__.pyi
.blender_stubs/bmesh/: __init__.pyi
.blender_stubs/bpy/: __init__.pyi
.blender_stubs/bpy/ops/: action.pyi  (+77 more)
.blender_stubs/bpy_extras/: __init__.pyi
.blender_stubs/gpu/: __init__.pyi
.blender_stubs/gpu_extras/: __init__.pyi
.blender_stubs/idprop/: __init__.pyi
.blender_stubs/imbuf/: __init__.pyi
.blender_stubs/mathutils/: __init__.pyi
.github/: dependabot.yml
.github/workflows/: ci.yml
savepoints_ext/: __init__.py  blender_manifest.toml  operators.py  panel.py
tests/: run_tests.py  test_sample.py
tools/: sync_vendor.py
(+3985 files in other folders)
